Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28183 Dead keys aren't working on Qt5
  3. QTBUG-32972

Parsing of the Compose file breaks with backslashes (escape characters)

XMLWordPrintable

      The Compose file has:

      <dead_diaeresis> <space>                : "\""   quotedbl # REVERSE SOLIDUS
      

      The Compose file parsing in 5.1.0 fails to read the escape. That means <dead_diaeresis> <space> produces a backslash instead of a quote.

      Patch for the double quote issue is in https://codereview.qt-project.org/#change,60652

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes