Fix escaped compose key parsing

This patch fixes the issue when the escape '\' character was
interpreted as a compose value.

On the whole en_US.UTF-8 Compose file it only affects the following
sequences:

<dead_diaeresis> <space>      : "\""   quotedbl # REVERSE SOLIDUS
<Multi_key> <slash> <slash>   : "\\"   backslash # REVERSE SOLIDUS
<Multi_key> <slash> <less>    : "\\"   backslash # REVERSE SOLIDUS
<Multi_key> <less> <slash>    : "\\"   backslash # REVERSE SOLIDUS

By coincidence the last 3 sequences were working even before this fix.

Task-number: QTBUG-32972
Change-Id: Ia4fc2156d982cf2918d0d1be6ee07706cfbfd091
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>